Update with new endpoints
